test/Fail/Issue4390flat.err
Issue4390flat.agda:12.28-29: error: [UnequalTypes]
The function type
  A → A
is not a subtype of
  @♭ A → A
because:
  one has continuous domain, while the other is flat.
when checking that the expression f has type @♭ A → A
